// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snap - injection | CONFIGURATION: default | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: default | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "u0vAeQ=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "f0X2OA=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "f0X2OA=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "c1xCfg=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "t5jxcw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "t5jxcw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "t5jxcw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "A1ShEg=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "M3Zuog=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "FDGvJg=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "kE4QPg=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests.__fixtures__" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "tests/" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_not-imported_JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___injection_multiple-uses_JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___injection_multiple-uses_JIv6Rw=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests___fixtures___injection_multiple-uses_MY3Bew=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests___fixtures___injection_some-supported-use-cases_JIv6Rw=="
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_some-supported-use-cases_JIv6Rw=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_some-supported-use-cases_JIv6Rw=="
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_default_JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests___fixtures___injection_with-custom-properties_sdlU2w=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_with-injectIntl_JIv6Rw=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with injectIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests___fixtures___injection_import-as_BZ+i7g=="
        })
    });
}
export default i18n(App);
"
`;
